package org.example;

public class Audio extends Media {

    @Override
    public void play() {
        System.out.println("Reproducing audio");
    }
}
