package org.example;

public abstract class Media {

    public abstract void play();
}
