package org.example;

public class VideoFile extends Media {

    @Override
    public void play() {
        System.out.println("Reproducing video file");
    }
}
