package org.example;

// third-party video stream class
public class VideoStream {

    public void reproduce() {
        System.out.println("Reproducing video stream");
    }
}
